hphp/hack/test/typecheck/lambda/lambda_bad_arity.php.exp
File "lambda_bad_arity.php", line 15, characters 7-65:
Too few arguments (Typing[4104])
File "lambda_bad_arity.php", line 6, characters 5-32:
Definition is here
